# PW_hw14

./: .env  .env.example  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 259a5ef98533_add_table_user.py  29c2945f3b00_add_verify_for_use_confirmed.py  9ae126078498_init.py  9d819808eb62_add_user_role.py
src/conf/: config.py  messages.py
src/entity/: models.py
src/repository/: todos.py
src/routes/: auth.py
src/schemas/: todo.py  user.py
src/services/templates/: verify_email.html
src/templates/: index.html
tests/: conftest.py  test_e2e_auth.py  test_unit_repository_todo.py
